[#48] Big Refactoring